# Data-science-and-ML

./: README.md  pyproject.toml
Lab 1/: Lab-1.ipynb
Lab 2/: Lab-2.ipynb
Lab 3/: Lab-3.ipynb
Lab 4/: Lab 4.ipynb
Tasks/: PCA.ipynb  url_classification.ipynb
Tutorials/ClearML/: 1_simple_task_with_logger.py  1_task_with_logger.py  2_remote_task.py  3_dataset_creation.py  4_task_with_dataset.py  ClearML Tutorial.ipynb
