[project]
name = "labs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel==6.29.5",
    "ipython==7.23.1",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.6",
    "matplotlib>=3.10.6",
    "numpy>=1.16.0,<2.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "ydata-profiling>=4.12.2",
]
